compiler/test-data/parser/types/errors/missing_accessor_type.frel
module test

blueprint BadAccessor(accessor: Accessor) {
    text_editor { accessor }
}
